--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "multer": "^2.0.2",
-  "sharp": "^0.32.4",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "pdfkit": "^0.17.2",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
