--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.1",
+    "pdfkit": "^0.17.2",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
     "react-circular-progressbar": "^2.2.0",
