Revert "feat: Add Checkout Module"
This reverts commit f8293202d3d25ade1ed6c9248a21ba46adad7d50.

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "multer": "^2.0.2",
-    "nodemailer": "^6.9.1",
-    "pdfkit": "^0.17.2",
-    "sharp": "^0.32.4"
+  "sharp": "^0.32.4",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
