--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "chart.js": "^4.5.1",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.1",
     "react-circular-progressbar": "^2.2.0",
     "react-datepicker": "^8.8.0",
